--- a/1.html
+++ b/1.html
@@ -12,19 +12,25 @@
 
   gtag('config', 'G-XNYJ5RNYJF');
 </script>
+<style>
+    a {color:black;
+    text-decoration:none;}
+</style>
 </head>
 <body>
+    <!--이것은주석입니다.-->
     <h1><a href = "index.html">WEB</a></h1>
     <ol>
-        <li><a href = "1.html">HTML</a></li>
+        <li><a href = "1.html" style="color:red; text-decoration:underline;">HTML</a></li>
         <li><a href = "2.html">CSS</a></li>
         <li><a href = "3.html">JavaScript</a></li>
     </ol>
+    <hr>
     <h3>HTML</h3>
-    <img src="coding.jpg" width="80%">
-    <p><a href = "https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
+    <img src="coding.jpg" width="80%" title="HTML이미지">
+    <p title="HTML설명1"><a href = "https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
     Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-    </p><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. </p>
+    </p><p style="margin-top:45px;" title = "HTML설명2">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. </p>
     <p><iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
     <p><div id="disqus_thread"></div>
         <script>
