--- a/2.html
+++ b/2.html
@@ -12,14 +12,30 @@
 
   gtag('config', 'G-XNYJ5RNYJF');
 </script>
+<style>
+    a {
+        color:black;
+        text-decoration:none
+    }
+</style>
 </head>
 <body>
     <h1><a href = "index.html">WEB</a></h1>
     <ol>
         <li><a href = "1.html">HTML</a></li>
-        <li><a href = "2.html">CSS</a></li>
+        <li><a href = "2.html" style="color:red;text-decoration:underline;">CSS</a></li>
         <li><a href = "3.html">JavaScript</a></li>
     </ol>
+
+    <!--
+    <h1><a href = "index.html"><font color="red">WEB</font></a></h1>
+    <ol>
+        <li><a href = "1.html"><font color="red">HTML</font></a></li>
+        <li><a href = "2.html"><font color="red">CSS</font></a></li>
+        <li><a href = "3.html"><font color="red">JavaScript</font></a></li>
+    </ol>
+-->
+    <hr>
     <h3>CSS</h3>
     <img src = "CSS.jpg" width = "80%">
     <p><a href = "https://www.w3.org/Style/CSS/specs.en.html" target="_blank" title="CSS specification">Cascading Style Sheets (CSS)</a> is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).
