--- a/3.html
+++ b/3.html
@@ -12,14 +12,21 @@
 
   gtag('config', 'G-XNYJ5RNYJF');
 </script>
+<style>
+    a {
+        color:black;
+        text-decoration:none;
+    }
+</style>
 </head>
 <body>
     <h1><a href = "index.html">WEB</a></h1>
     <ol>
         <li><a href = "1.html">HTML</a></li>
         <li><a href = "2.html">CSS</a></li>
-        <li><a href = "3.html">JavaScript</a></li>
+        <li><a href = "3.html" style = "color:red;text-decoration:underline;">JavaScript</a></li>
     </ol>
+    <hr>
     <h3>JavaScript</h3>
     <img src="javascript.jpg" width="80%">
     <p><a href="https://www.w3resource.com/javascript/introduction/ECMA-and-javascript.php" target="_blank" title="JavaScript Specification">JavaScript, often abbreviated to JS,</a> is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. As of 2022, 98% of websites use JavaScript on the client side for webpage behavior, often incorporating third-party libraries. All major web browsers have a dedicated JavaScript engine to execute the code on users' devices. </p>
